# ctxmate

./: Makefile  README.md  ctxmate.code-workspace  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml
backends/: echo.py
ctxmate/: cli.py
ctxmate_cli/: pyproject.toml
ctxmate_cli/src/ctxmate_cli/: builtin_prompt_loader.py  cli.py  config.py  context.py  files.py  hydrator.py  project_prompt_loader.py  prompt_loader.py  renderer.py
ctxmate_cli/src/ctxmate_cli/loading/: builtin_prompt_loader.py  manager.py
ctxmate_cli/src/tests/: test_config_loading.py  test_context.py  test_files.py  test_hydrator.py  test_prompt_loader.py  test_renderer.py
ctxmate_cli/src/tests/prompts/: 001-generate-readme.txt  002-test-variables.txt  003-test-descriptions.txt  project.txt  system.txt
ctxmate_echo_backend/: pyproject.toml
ctxmate_echo_backend/src/ctxmate_echo_backend/: __main__.py  echo.py
ctxmate_schema/: Makefile  pyproject.toml
ctxmate_schema/protos/: schema.proto
ctxmate_schema/src/ctxmate_schema/: schema_pb2.py  schema_pb2.pyi
examples/prompts/: project.txt  tailwind.txt
schema/: schema.proto
src/ctxmate/: cli.py  executor.py  schema_pb2.py  schema_pb2.pyi
