[project]
name = "ctxmate-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "types-click",
    "protobuf~=5.29.1",
    "types-protobuf==5.29.1.20250208",
    "ctxmate-schema",
    "ctxmate-echo-backend",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
]
[project.scripts]
ctxmate = "ctxmate_cli.cli:cli"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = true

pythonVersion = "3.13"
pythonPlatform = "Darwin"

executionEnvironments = [
  { root = "src" }
]

[tool.uv.sources]
ctxmate-schema = { path = "../ctxmate_schema" }
ctxmate-echo-backend = { path = "../ctxmate_echo_backend" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [ "src" ]
