[project]
name = "ctxmate-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "types-click",
    "ctxmate-schema",
    "ctxmate-echo-backend",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "xdg-base-dirs>=6.0.2",
    "rich>=13.9.4",
    "requests>=2.32.3",
    "gitignore-parser>=0.1.11",
]
[project.scripts]
ctxmate = "ctxmate_cli.cli:cli"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }
# stubPath = "../ctxmate_schema/src/ctxmate_schema"

reportMissingImports = "error"
reportMissingTypeStubs = true

pythonVersion = "3.13"
pythonPlatform = "Darwin"

executionEnvironments = [
  { root = "src" }
]

[tool.uv.sources]
ctxmate-schema = { path = "../ctxmate_schema" }
ctxmate-echo-backend = { path = "../ctxmate_echo_backend" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [ "src" ]
