[project]
name = "ctxmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "types-click",
    "protobuf~=5.29.1",
    "types-protobuf==5.29.1.20250208",
    "ctxmate-schema",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "schema_pb2.py"
]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = true

pythonVersion = "3.13"
pythonPlatform = "Darwin"

executionEnvironments = [
  { root = "src" }
]

[tool.uv.sources]
ctxmate-schema = { path = "../ctxmate_schema" }
